# ur15_crisp

./: .gitignore  .gitmodules  README.md  ai_setup_guideline.md  auto_opt.md  integration.md  plan.md
config/: joint_config.yaml  position_control.yaml  robot_config.yaml  ur15_sim_controllers.yaml
scripts/: bag_to_dataset.py  calibrate_tool_weight.py  test_crisp_py.py  test_force_control.py  test_force_min.py  test_impedance_urscript.py  test_joystick_wrench.py  test_spring_motion.py  test_urscript_recovery.py  test_wrench_urscript.py  ur15_client_dummy.py  ur15_history_action_client.py
src/: ur_sim_config
src/alicia_teleop/: package.xml  setup.cfg  setup.py
src/alicia_teleop/alicia_teleop/: teleop_node.py
src/alicia_teleop/launch/: alicia_teleop.launch.py
src/camera_node/: README.md  package.xml  setup.cfg  setup.py
src/camera_node/camera_node/: camera_node.py
src/camera_node/launch/: ur15_cam_launch.py
src/common/: package.xml  setup.py
src/common/common/: __init__.py  config_manager.py  workspace.py  workspace_utils.py
src/crisp_ur15_bringup/: package.xml  setup.cfg  setup.py
src/crisp_ur15_bringup/config/: ur15_controllers.yaml
src/crisp_ur15_bringup/launch/: ur15_crisp.launch.py
src/crisp_web_control/: package.xml  setup.cfg  setup.py
src/crisp_web_control/crisp_web_control/: web_server.py
src/crisp_web_control/crisp_web_control/static/: index.html
src/crisp_web_control/launch/: web_control.launch.py
src/data_collection/: CMakeLists.txt  package.xml
src/data_collection/launch/: data_collection.launch.py
src/data_collection/scripts/: dashboard_node.py
src/data_collection/static/: index.html  process.html
src/joint_history_vla_control/: package.xml  setup.cfg  setup.py
src/joint_history_vla_control/joint_history_vla_control/: vla_server.py
src/joint_history_vla_control/joint_history_vla_control/static/: index.html
src/joint_history_vla_control/launch/: joint_history_vla_control.launch.py
src/joint_vla_control/: README.md  package.xml  setup.cfg  setup.py
src/joint_vla_control/joint_vla_control/: vla_server.py
src/joint_vla_control/joint_vla_control/static/: index.html
src/joint_vla_control/launch/: joint_vla_control.launch.py
src/robotiq_2f140_gripper/: README.md  package.xml  setup.cfg  setup.py
src/robotiq_2f140_gripper/launch/: robotiq_gripper.launch.py  robotiq_gripper_web.launch.py
src/robotiq_2f140_gripper/robotiq_2f140_gripper/: robotiq_gripper.py  robotiq_gripper_node.py  rs485_client.py
src/robotiq_2f140_gripper_web/: README.md  package.xml  setup.cfg  setup.py
src/robotiq_2f140_gripper_web/launch/: gripper_web.launch.py
src/robotiq_2f140_gripper_web/robotiq_2f140_gripper_web/: __init__.py  gripper_web_node.py
src/robotiq_2f140_gripper_web/robotiq_2f140_gripper_web/static/: script.js  style.css
src/robotiq_2f140_gripper_web/robotiq_2f140_gripper_web/templates/: index.html
src/robotiq_gripper_msgs/: CMakeLists.txt  package.xml
src/robotiq_gripper_msgs/action/: GripperActivate.action  GripperControl.action
src/robotiq_gripper_msgs/msg/: GripperStatus.msg
src/ur15_bringup/: package.xml  setup.cfg  setup.py
src/ur15_bringup/config/: ur15_controllers_template.yaml  ur15_sim_controllers.yaml
src/ur15_bringup/launch/: ur15_crisp.launch.py  ur15_crisp_sim.launch.py
src/ur15_dashboard/: CMakeLists.txt  package.xml
src/ur15_dashboard/launch/: ur15_dashboard.launch.py
src/ur15_dashboard/scripts/: dashboard_node.py
src/ur15_dashboard/static/: index.html
src/ur15_dashboard/static/robot/: model.urdf
src/ur15_dashboard/ur15_dashboard/: kinematics.py
src/vision_tracker_6d/: README.md  package.xml  setup.cfg  setup.py
src/vision_tracker_6d/config/: calibration_pattern_template.json  intrinsic_calibration_pattern_template.json  tracking_pattern_template.json  vision_tracker_config_template.yaml
src/vision_tracker_6d/launch/: vision_tracker.launch.py
src/vision_tracker_6d/static/: .gitkeep
src/vision_tracker_6d/vision_tracker_6d/: calibration_loader.py  camera_manager.py  chessboard_detector.py  pattern_detector.py  pose_filter.py  tracker_node.py  web_server.py
src/vision_tracker_6d/vision_tracker_6d/static/: index.html
src/web_control/: package.xml  setup.cfg  setup.py
src/web_control/config/: rviz_control.rviz
src/web_control/launch/: rviz_control.launch.py  web_control.launch.py
src/web_control/test/: test_placeholder.py
src/web_control/web_control/: auto_opt.py  target_pose_marker.py  ur_force_mode.py  web_server.py
src/web_control/web_control/static/: index.html
