<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alicia_teleop</name>
  <version>0.1.0</version>
  <description>Teleoperation of UR15 using Alicia-D leader arm</description>
  <maintainer email="yizhong@example.com">yizhong</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>alicia_duo_leader_driver</depend>

  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
