<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common</name>
  <version>0.1.0</version>
  <description>Common utilities for ur15_crisp workspace</description>
  <maintainer email="yizhongzhang1989@gmail.com">yizhong</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
