<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_collection</name>
  <version>1.0.0</version>
  <description>Data collection dashboard and tools for UR15</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ur15_dashboard</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
